
- Challenges collection
- URL routing and browser history between collections
  - e.g. https://diablo4.dad/transmogs/general

### Updated

- Improved skeletons layout for smoother transitions when loading
- Improved dynamic loading of images, reduced screen shift
- Improved class icon layout
- Transitions when opening and closing collections
- Collection menu visibility now toggled via to clicks
- Renamed collection "Standard Armor" to "Armor"
- Renamed collection "Standard Weapon" to "Weapons"
- Moved Seasonal reputation board rewards to own sub-category
- Moved essential collections into sub-categories (zones, monsters etc.)

### Fixed

- Hide collected items option reducing progress bar when enabled
- Progress bar flicker when loading
- Fur-Lined Boots + Mitts erroneously selected from Season 2 collection

### Removed

- Challenge category from the Essential Collection
- Well-Wisher title from the Quest collection
- Unused hide progress bar option
- Superfluous hide completed collections option

## [1.6.10] - 2024-06-24

### Added

- Automatic tagging of duplicate items
- "Tejal's Gifts" collection

### Updated

- Moved "Mother's Favor" items from shop into "Tejal's Gifts"
- Season 4 Battle Pass title from "Tempered Mindcaged" to "Frenzied Mindcaged"

## [1.6.9] - 2024-06-21

### Added

- "Mother's Favor" weapon bundle to shop collection

### Updated

- Changed the small "Wardrobe Icon" label into an image tag
- Moved the 5 "Path of..." bundles to the "portals" collection

## [1.6.8] - 2024-06-14

### Added

- Filter to show wardrobe transmogs only

### Fixed

- Margins of tags when 4+ tags are shown

## [1.6.7] - 2024-06-14

### Added

- "Pet" and "Back Trophy" filters

#### Essential Collection

- "1st Year Anniversary" collection
- "Vessel of Hatred" collection
- "Blazon of Victory" to Challenge collection
- "Asheara" pet to Quest collection

#### Tejal's Shop

- "Path of the Hydra" accessories
- "Path of the Ash Knight" accessories